Fix macro function not executed because of not loading InvocationNode